--- a/style.css
+++ b/style.css
@@ -3,12 +3,19 @@
     border: 3px solid crimson;
     display: flex;
     flex-direction: column;
-    padding: 4px;
-    margin: 4px;
+    padding: 8px;
+    margin: 8px;
+    border-radius: 25px;
 }
 
 .todo-completed{
 
     border-color: lime;
+
+}
+
+body{
+
+    background-color: rgba(192, 187, 171, 0.836);
 
 }
